[package]
name = "mini-collide"
version = "0.3.0"
authors = ["Tristam MacDonald <tristam@trist.am>"]
license = "Apache-2.0"
description = "Lightweight collision routines for 3D graphics"
edition = "2021"

homepage = "https://github.com/swiftcoder/mini-collide-rs"
repository = "https://github.com/swiftcoder/mini-collide-rs"
documentation = "https://docs.rs/mini-collide"
readme = "README.md"

[dependencies]
mini-math = "0.2"
